spelling and doi addition
Spelling fixes and adding in the DOI links for the journal articles.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <h3>Teaching</h3>
       <ul>
         <li>In my role in the Syndey Voice Lab I provided assistance and guidance to Speech Pathology Honours students</li>
-        <li>I have over 10 years experience running tutorials and laboratories in first year Radiation Physics, Physics, Statistics and Mathematics across both The University of Sydney and Western Sydney University</li>
+        <li>I have over 10 years experience running tutorials and laboratories in Radiation Physics, Physics, Statistics and Mathematics at the University of Sydney and Western Sydney University</li>
       </ul>
 
     </div>
