Spelling and new headshot
Two spelling mistakes, changing some text and uploading my new headshot.

--- a/services.html
+++ b/services.html
@@ -48,7 +48,7 @@
   <!-- SECTION 1: Deciphering your Data -->
   <section class="section reveal">
   <div class="section-intro">
-    <p>I am a research scientist with a passion for extracting maximum value from your hard won data. Let me make sense of complicated data sets by cleaning, organsising and generating illuminating plots.</p>
+    <p>I am a research scientist with a passion for extracting maximum value from your hard won data. Let me make sense of complicated data sets by cleaning, organising and generating illuminating plots.</p>
   </div>
 
     <div class="section-content reverse">
@@ -76,7 +76,7 @@
   <!-- SECTION 2: Statistical Analysis -->
   <section class="section reveal">
   <div class="section-intro">
-    <p>Statistical analysis is not everybodies strong suit. Let me apply cutting edge techniques to your data so we can find those trends and outcomes which you know are in there!</p>
+    <p>Statistical analysis is not everybody's strong suit. Let me apply cutting edge techniques to your data so we can find those trends and outcomes which you know are in there!</p>
   </div>
 
     <div class="section-content reverse">
@@ -141,10 +141,6 @@
 
 		  <h1>Consulting Services</h1>
 		  <h2>Flexible engagement options to suit different project timeframes</h2>
-		  <div class="section-intro">
-			<p>This project focused on bridging the gap between clinical research and real-world mobile accessibility.</p>
-		  </div>
-
 
 		  <div class="language-grid">
 
@@ -199,8 +195,12 @@
 				<li>Final reporting and archival closure</li>
 			  </ul>
 			</div>
-
 		  </div>
+
+  		  <div class="section-intro" style="margin-top: 10rem; margin-bottom: 0.5rem;">
+            <p>Write to me to arrange a meeting</p>
+          </div>
+
 		</div>
 	  </div>
 	</section>
